[package]
name = "threedots"
version = "0.1.0"
authors = ["Alan Rempel <alan.rempel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8"
walkdir = "2"
serde_yaml = "0.8.13"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
askama = "0.10"
relative-path = "1.3"
[dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "std", "serde"]
